[package]
name = "shared-key-chacha"
version = "0.1.0"
edition = "2024"

[dependencies]
base64 = "0.22.1"
chacha20poly1305 = { version = "0.10.1", features = ["std"] }
chrono = "0.4.40"
rand = "0.9.0"
thiserror = "2"
uuid = { version = "1.15.1", features = ["v7"] }

[dev-dependencies]
anyhow = "1"
tokio = { version = "1",  features = ["macros", "rt"]}